--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <title>(insicurissimo) password generator</title>
 </head>
 <body>
+    <script src="./js/script.js"></script>
 </body>
 </html>
